prod-namespace.yaml
# Creates a namespace
apiVersion: v1
kind: Namespace
metadata:
  name:  production
  "labels": {
      "name": production
    }
