my-nginx-exposed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: development
  labels:
    run: my-nginx
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    run: my-nginx
