my-nginx-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-lb
  labels:
    run: my-nginx-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    run: my-nginx-lb
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: my-nginx-lb
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx-lb
    spec:
      containers:
      - name: my-nginx-lb
        image: nginx
        ports:
        - containerPort: 443
        - containerPort: 80
