my-nginx-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: production
  labels:
    run: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx
