my-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx
  namespace: development
  labels:
    run: my-nginx
spec:
  backend:
    serviceName: my-nginx
    servicePort: 80
